add hashtagelectrosanne in works

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -25,6 +25,9 @@ homepage:
         faceit:
             title: Médecins Sans Frontières
             baseline: Communication digitale
+        electrosanne:
+            title: Hashtagelectrosanne
+            baseline: Plateforme sociale
 
 
 antistatique:
