--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -28,6 +28,9 @@ homepage:
         electrosanne:
             title: Hashtagelectrosanne
             baseline: Plateforme sociale
+        ehl:
+            title: EHL
+            baseline: Campus Development Forum
 
 
 antistatique:
