--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -31,6 +31,9 @@ homepage:
         ehl:
             title: EHL
             baseline: Campus Development Forum
+        courtierspartenaires:
+            title: Courtiers partenaires
+            baseline: Application mobile immobilière
 
 
 antistatique:
