add cardis portfolio

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -46,6 +46,9 @@ homepage:
         brouillondeculture:
             title: Brouillon de Culture
             baseline: Websérie RTS
+        cardis:
+            title: Cardis immobilier
+            baseline: Plateforme immobilière
 
 
 antistatique:
