add devenez portfolio

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -55,6 +55,9 @@ homepage:
         prateo:
             title: Prateo
             baseline: Rebranding complet et Wordpress personnalisé
+        devenez:
+            title: devenez.ch
+            baseline: Campagne de communication
 
 
 antistatique:
