Hashtag Electrosanne avec un espace

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -26,7 +26,7 @@ homepage:
             title: Médecins Sans Frontières
             baseline: Communication digitale
         electrosanne:
-            title: Hashtagelectrosanne
+            title: Hashtag Electrosanne
             baseline: Plateforme sociale
         ehl:
             title: EHL
