contenu révisé ... un peu

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -65,8 +65,8 @@ antistatique:
         work:
             title: Travaillons ensemble
     mission:
-        title: Notre mission ? Combattre la poussière dans votre présence web.
-        description: Nous faisons des sites web rutilants et des applications mobiles vraiment utiles. Nous construisons des boutiques en ligne sur-mesure. Nous soignons votre réputation et le positionnement de votre marque. Nous vous aidons à établir puis exécuter des stratégies appropriées pour les médias sociaux.
+        title: Centrée sur l'utilisateur, pour l'amélioration continue et dévouée à augmenter votre ROI
+        description: Antistatique est une agence web qui crée des solutions digitales. Des passionnés représentant les professions : développeurs frontend et backend, graphistes, spécialistes du marketing. Avec une envie commune, mettre nos divers savoirs au profit de vos projets.
         link: Découvrir Antistatique
 
     loading: Chargement ...
